# percona-data-federation-server

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: bench.yml  qa.yml  security.yml  trivy.yml
benches/: factorial.rs  fibonacci.rs
pysrc/test_util/: __init__.py  pdfs.py
pytests/: test_simple_output.py
src/: factorial.rs  fibonacci.rs  lib.rs  main.rs
tests/: integration_test_1.rs
