[project]
name = "test_util"
version = "0.1.0"
description = "A test utility library for Percona Data Federation Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "pysrc"

[project.scripts]
example-cmd = "test_util:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

